--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Set up Go 1.20
       uses: actions/setup-go@v4.0.0
       with:
-        go-version: 1.20
+        go-version: 1.20.x
       id: go
 
     - name: Check out code into the Go module directory
