--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -29,6 +29,8 @@ jobs:
     #      export PATH=$PATH:$(go env GOPATH)/bin # temporary fix. See https://github.com/actions/setup-go/issues/14
     #      go get -u golang.org/x/lint/golint
     #      golint ./...
+    - name: Cache
+      uses: actions/cache@v3.3.2
 
     - name: submodule
       run: git submodule update --init --recursive
