--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -31,6 +31,13 @@ jobs:
     #      golint ./...
     - name: Cache
       uses: actions/cache@v3.3.2
+      with:
+        path: |
+          ~/.cache/go-build
+          ~/go/pkg/mod
+        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+        restore-keys: |
+          ${{ runner.os }}-go-
 
     - name: submodule
       run: git submodule update --init --recursive
