--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -12,6 +12,8 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
+    - name: Check out code into the Go module directory
+      uses: actions/checkout@v4.1.0
 
     - name: Set up Go 1.21
       uses: actions/setup-go@v4.1.0
@@ -19,8 +21,8 @@ jobs:
         go-version: 1.21.x
       id: go
 
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v4.1.0
+      #- name: Check out code into the Go module directory
+      #uses: actions/checkout@v4.1.0
 
     #- name: Lint code
     #  run: |
