--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v4.1.0
+      with:
+        fetch-depth: 0
 
     - name: Set up Go 1.21
       uses: actions/setup-go@v4.1.0
