--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -33,15 +33,15 @@ jobs:
     #      export PATH=$PATH:$(go env GOPATH)/bin # temporary fix. See https://github.com/actions/setup-go/issues/14
     #      go get -u golang.org/x/lint/golint
     #      golint ./...
-    - name: Cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: |
-          ~/.cache/go-build
-          ~/go/pkg/mod
-        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-        restore-keys: |
-          ${{ runner.os }}-go-
+    #- name: Cache
+    #  uses: actions/cache@v3.3.2
+    #  with:
+    #    path: |
+    #      ~/.cache/go-build
+    #      ~/go/pkg/mod
+    #    key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+    #    restore-keys: |
+    #      ${{ runner.os }}-go-
 
     - name: submodule
       run: git submodule update --init --recursive
