--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,6 +21,7 @@ jobs:
       uses: actions/setup-go@v5.0.0
       with:
         go-version: 1.22.x
+        cache: false
       id: go
 
       #- name: Check out code into the Go module directory
